# gssi-le-6-mc-techniques

./: Cargo.toml  README.md  README.template.md  debug.ipynb  ex8_debug.ipynb  ex_2_2.py  ex_3.py  make_readme.py
src/: compton_mc.rs  ex1.rs  ex2.rs  ex3.rs  ex5.rs  ex6.rs  ex7.rs  ex8.rs  main.rs  plot.rs  utils.rs
src/utils/: mod.rs  plot_histogram.rs
