[package]
name = "le-6-monte-carlo-techniques"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
histogram = "0.10.0"
itertools = "0.12.1"
ndhistogram = "0.9.0"
num = { version = "0.4.1", features = ["std"] }
plotters = "0.3.5"
rand = "0.8.5"
